[package]
name = "ichno-cli"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "ichno"

[dependencies]
chrono = "0.4.1"
diesel = { version = "1.4.5", features = ["extras", "sqlite"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
ichno = { version = "0.1.0", path = "../ichno" }
ignore = "0.4.15"
twox-hash = "1.5.0"
log = "0.4.8"
