[package]
name = "ichno"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"

[dependencies]
chrono = "0.4.1"
diesel = { version = "1.4.5", features = ["extras", "sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
esegit = { version = "0.1.0", path = "../../treblo/crates/esegit" }
ignore = "0.4.15"
log = "0.4.8"
sha-1 = "0.8"
sha2 = "0.8"
twox-hash = "1.5.0"
url = "2.1.1"