[package]
name = "ichno"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.3", features = ["extras", "sqlite"] }
diesel_migrations = "2.1.0"
log = "0.4.20"
optional_derive = { path = "../optional_derive" }
serde = { version = "1.0.189", features = ["derive"] }
sha-1 = "0.10.1"
sha2 = "0.10.8"
treblo = { path = "../treblo" }
twox-hash = "1.6.3"
url = "2.4.1"
