[package]
name = "ichno_cli"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"
publish = false

[[bin]]
path = "src/main.rs"
name = "ichno"
doc = false

[dependencies]
chrono = "0.4.1"
diesel = { version = "1.4.5", features = ["extras", "sqlite"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
ichno = { path = "../ichno" }
ignore = "0.4.15"
log = "0.4.8"
structopt = "0.3.14"
twox-hash = "1.5.0"
