[package]
name = "ichno_cli"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2021"
publish = false

[[bin]]
path = "src/main.rs"
name = "ichno"
doc = false

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.3", features = ["extras", "sqlite"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
ichno = { path = "../ichno" }
ignore = "0.4.20"
itertools = "0.9.0"
log = "0.4.20"
structopt = "0.3.26"
twox-hash = "1.6.3"
