[package]
name = "ichnome"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"

[dependencies]
chrono = "0.4.1"
diesel = { version = "1.4.5", features = ["extras", "mysql", "sqlite"] }
diesel_migrations = "1.4.0"
ichno = { version = "0.1.0", path = "../ichno" }
log = "0.4.8"
sha-1 = "0.8"
sha2 = "0.8"
ssh2 = "0.8.2"
tempfile = "3.1.0"
treblo = { version = "0.1.0", path = "../treblo" }
twox-hash = "1.5.0"
url = "2.1.1"
