[package]
name = "ichnome"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"
publish = false

[dependencies]
chrono = { version = "0.4.1", features = ["serde"] }
diesel = { version = "1.4.6", features = ["extras", "mysql", "sqlite"] }
diesel_migrations = "1.4.0"
ichno = { path = "../ichno" }
log = "0.4.8"
optional_derive = { path = "../optional_derive" }
serde = { version = "1.0.110", features = ["derive"] }
sha-1 = "0.8"
sha2 = "0.8"
ssh2 = "0.8.2"
tempfile = "3.1.0"
treblo = { path = "../treblo" }
twox-hash = "1.5.0"
url = "2.1.1"
