[package]
name = "ichnome_cli"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"
publish = false

[[bin]]
path = "src/main.rs"
name = "ichnome"
doc = false

[dependencies]
chrono = { version = "0.4.1", features = ["serde"] }
diesel = { version = "1.4.6", features = ["extras", "mysql", "sqlite"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
ichno = { path = "../ichno" }
ichnome = { path = "../ichnome" }
ignore = "0.4.15"
log = "0.4.8"
ssh2 = "0.8.2"
structopt = "0.3.14"
twox-hash = "1.5.0"
