[package]
name = "ichnome_cli"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2021"
publish = false

[[bin]]
path = "src/main.rs"
name = "ichnome"
doc = false

[dependencies]
aws-config = "0.56.1"
aws-sdk-s3 = "0.34.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.3", features = ["extras", "sqlite"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
ichno = { path = "../ichno" }
ichnome = { path = "../ichnome" }
ignore = "0.4.20"
log = "0.4.20"
ssh2 = "0.9.4"
structopt = "0.3.26"
tokio = { version = "1.33.0", features = ["sync", "rt-multi-thread", "macros"] }
twox-hash = "1.6.3"

[features]
default = ["postgres"]
postgres = ["diesel/postgres", "ichnome/postgres"]
