[package]
name = "ichnome_web"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2021"
publish = false

[[bin]]
path = "src/main.rs"
name = "ichnome-web"
doc = false

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.3", features = ["extras", "mysql", "sqlite"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
ichnome = { path = "../ichnome" }
log = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
structopt = "0.3.26"
url = "2.4.1"
