[package]
name = "ichnome_web"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2021"
publish = false

[[bin]]
path = "src/main.rs"
name = "ichnome-web"
doc = false

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros", "tracing"] }
chrono = { version = "0.4.31", features = ["serde"] }
deadpool-diesel = "0.5.0"
diesel = { version = "2.1.3", features = ["extras", "sqlite"] }
dotenv = "0.15.0"
ichnome = { path = "../ichnome" }
serde = { version = "1.0.189", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.33.0", features = ["sync", "rt-multi-thread", "macros"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
treblo = { path = "../treblo" }
url = "2.4.1"

[features]
default = ["postgres"]
postgres = ["deadpool-diesel/postgres", "diesel/postgres", "ichnome/postgres"]
