[package]
name = "treblo_cli"
version = "0.1.1"
authors = ["taskie <t@skie.jp>"]
edition = "2018"
publish = false

[[bin]]
path = "src/main.rs"
name = "treblo"
doc = false

[dependencies]
byteorder = "1.3.4"
env_logger = "0.7.1"
ignore = "0.4.15"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
sha-1 = "0.8"
sha2 = "0.8"
structopt = "0.3.14"
treblo = { path = "../treblo" }
twox-hash = "1.5.0"
