[package]
name = "treblo_cli"
version = "0.1.1"
authors = ["taskie <t@skie.jp>"]
edition = "2021"
publish = false

[[bin]]
path = "src/main.rs"
name = "treblo"
doc = false

[dependencies]
byteorder = "1.5.0"
env_logger = "0.10.0"
ignore = "0.4.20"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sha-1 = "0.10.1"
sha2 = "0.10.8"
structopt = "0.3.26"
treblo = { path = "../treblo" }
twox-hash = "1.6.3"
