[package]
name = "treblo-cli"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"

[dependencies]
env_logger = "0.7.1"
ignore = "0.4.15"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
sha-1 = "0.8"
sha2 = "0.8"
structopt = "0.3.14"
treblo = { version = "0.1.0", path = "../.." }
